Lisasin Instructorile Delete

--- a/ContosoUniversity/Views/Instructors/Delete.cshtml
+++ b/ContosoUniversity/Views/Instructors/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContosoUniversity.Models.Student
+﻿@model ContosoUniversity.Models.Instructor
 
 @{
     ViewData["Title"] = "Delete";
@@ -26,10 +26,10 @@
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EnrollmentDate)
+            @Html.DisplayNameFor(model => model.HireDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EnrollmentDate)
+            @Html.DisplayFor(model => model.HireDate)
         </dd>
     </dl>
 
