--- a/ContosoUniversity/Views/Departments/Create.cshtml
+++ b/ContosoUniversity/Views/Departments/Create.cshtml
@@ -10,22 +10,22 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Name" class="control-label"></label>
-            <input asp-for="Name" class="form-contol"></input>
+            <input asp-for="Name" class="form-control"></input>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
             <div class="form-group">
                 <label asp-for="Budget" class="control-label"></label>
-                <input asp-for="Budget" class="form-contol"></input>
+                <input asp-for="Budget" class="form-control"></input>
                 <span asp-validation-for="Budget" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-contol"></input>
+                <input asp-for="StartDate" class="form-control"></input>
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Lore" class="control-label"></label>
-                <input asp-for="Lore" class="form-contol"></input>
+                <input asp-for="Lore" class="form-control"></input>
                 <span asp-validation-for="Lore" class="text-danger"></span>
             </div> 
             <div class="form-group">
