Lisasin Details ja Edit

--- a/ContosoUniversity/Views/Delinquents/Index.cshtml
+++ b/ContosoUniversity/Views/Delinquents/Index.cshtml
@@ -16,6 +16,7 @@
             <th>
                 @Html.DisplayNameFor(Model => Model.FirstMidName)
             </th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
