Mingi BaseOn asi

--- a/ContosoUniversity/Views/Departments/Index.cshtml
+++ b/ContosoUniversity/Views/Departments/Index.cshtml
@@ -34,6 +34,7 @@
                     <a asp-action="Edit Administrator" asp-route-id="@department.DepartmentID" class="btn btn-dark">Edit Administrator</a>
                     <a asp-action="Clone" asp-route-id="@department.DepartmentID" class="btn btn-dark">Clone</a>
                     <a asp-action="Delete" asp-route-id="@department.DepartmentID" class="btn btn-dark">Delete</a>
+                    <a asp-action="BaseOn" asp-route-id="@department.DepartmentID" class="btn btn-dark">BaseOn</a>
                 </td>
             </tr>
         }
