--- a/ContosoUniversity/Views/Courses/Index.cshtml
+++ b/ContosoUniversity/Views/Courses/Index.cshtml
@@ -27,9 +27,8 @@
                 <td>
                     <a asp-action="Details" asp-route-id="@course.CourseID" class="btn btn-dark">Details</a>
                     <a asp-action="Edit" asp-route-id="@course.CourseID" class="btn btn-dark">Edit</a>
-                    <a asp-action="Edit Administrator" asp-route-id="@course.CourseID" class="btn btn-dark">Edit Administrator</a>
                     <a asp-action="Delete" asp-route-id="@course.CourseID" class="btn btn-dark">Delete</a>
-                    <a asp-action="BaseOn" asp-route-id="@course.CourseID" class="btn btn-dark">BaseOn</a>
+                    <a asp-action="Clone" asp-route-id="@course.CourseID" class="btn btn-dark">Clone</a>
                 </td>
             </tr>
         }
