--- a/ContosoUniversity/Views/Courses/DetailsDelete.cshtml
+++ b/ContosoUniversity/Views/Courses/DetailsDelete.cshtml
@@ -1,42 +1,40 @@
-﻿
-@model ContosoUniversity.Models.Course
-
+﻿@model ContosoUniversity.Models.Course
 @{
-    ViewData["Title"] = "DetailsDelete";
+    ViewData["Details"] = ViewBag.Title;
 }
-
-<h1>Details</h1>
-
+<h1>@ViewBag.Title</h1>
 <div>
-    <h4>Course data</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2"> @Html.DisplayNameFor(model => model.CourseID)</dt>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CourseID);
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CourseID);
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Title);
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Title);
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Credits);
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Credits);
+        </dd>
     </dl>
-    <dl class="row">
-        <dt class="col-sm-10"> @Html.DisplayFor(model => model.CourseID)</dt>
-    </dl>
-    <dl class="row">
-        <dt class="col-sm-2"> @Html.DisplayNameFor(model => model.Title)</dt>
-    </dl>
-    <dl class="row">
-        <dt class="col-sm-10"> @Html.DisplayFor(model => model.Title)</dt>
-    </dl>
-    <dl class="row">
-        <dt class="col-sm-2"> @Html.DisplayNameFor(model => model.Credits)</dt>
-    </dl>
-    <dl class="row">
-        <dt class="col-sm-10"> @Html.DisplayFor(model => model.Credits)</dt>
-    </dl> 
-    <dl class="row">
-        <dt class="col-sm-2"> @Html.DisplayNameFor(model => model.Enrollments)</dt>
-    </dl>
-    <dl class="row">
-        <dt class="col-sm-10"> @Html.DisplayFor(model => model.Enrollments)</dt>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.CourseID">Edit</a>
-    <a asp-action="Clone" asp-route-id="@Model.CourseID">Duplicate</a>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    @{
+        if (ViewBag.Title == "Details")
+        {
+            <a asp-action="CreateEdit" asp-route-id="@Model.CourseID" class="btn btn-warning">Edit</a>
+            <a asp-action="Clone" asp-route-id="@Model.CourseID" class="btn btn-secondary">Clone</a>
+        }
+        else
+        {
+            <a asp-action="Delete" asp-route-id="@Model.CourseID" class="btn btn-danger">Delete</a>
+        }
+    }
 </div>
