--- a/ContosoUniversity/Views/Courses/DetailsDelete.cshtml
+++ b/ContosoUniversity/Views/Courses/DetailsDelete.cshtml
@@ -34,7 +34,7 @@
         }
         else
         {
-            <a asp-action="Delete" asp-route-id="@Model.CourseID" class="btn btn-danger">Delete</a>
+            <a asp-action="Clone" asp-route-id="@Model.CourseID" class="btn btn-danger">Delete</a>
         }
     }
 </div>
