--- a/ContosoUniversity/Views/Courses/Index.cshtml
+++ b/ContosoUniversity/Views/Courses/Index.cshtml
@@ -27,6 +27,7 @@
                 <td>
                     <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" class="btn btn-dark">Details</a>
                     <a asp-action="CreateEdit" asp-route-id="@course.CourseID" class="btn btn-dark">Edit</a>
+                    <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" class="btn btn-dark">Delete</a>
                 </td>
             </tr>
         }
