--- a/ContosoUniversity/Views/Courses/Index.cshtml
+++ b/ContosoUniversity/Views/Courses/Index.cshtml
@@ -25,7 +25,7 @@
                 <td>@Html.DisplayFor(modelItem => course.Credits)</td>
                 <td>@Html.DisplayFor(modelItem => course.Enrollments.Count)</td>
                 <td>
-                    <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" class="btn btn-dark">Details</a>
+                    <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" asp-route-pagetype="@{string pagetype = "details";}" class="btn btn-dark">Details</a>
                     <a asp-action="CreateEdit" asp-route-id="@course.CourseID" class="btn btn-dark">Edit</a>
                     <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" class="btn btn-dark">Delete</a>
                 </td>
