--- a/ContosoUniversity/Views/Courses/CreateEdit.cshtml
+++ b/ContosoUniversity/Views/Courses/CreateEdit.cshtml
@@ -2,18 +2,19 @@
 @{
     ViewData["Title"] = ViewBag.Title;
 }
+
 <h2>@ViewBag.Description</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="CreateEdit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @{
-                if (ViewBag.Title == "Edit")
-                {
-                    <input type="hidden" asp-for="CourseID" />
-                }
+
+            @if (ViewBag.Title == "Edit")
+            {
+                <input type="hidden" asp-for="CourseID" />
             }
+
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -31,3 +32,9 @@
         <a asp-action="Index" class="btn btn-outline-primary">Back</a>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
