--- a/ContosoUniversity/Views/Courses/CreateEdit.cshtml
+++ b/ContosoUniversity/Views/Courses/CreateEdit.cshtml
@@ -1,40 +1,22 @@
 ﻿@model ContosoUniversity.Models.Course
 @{
-    ViewData["Title"] = ViewBag.Title;
+    ViewData["Title"] = Model.CourseID == 0 ? "Create Course" : "Edit Course";
 }
-
-<h2>@ViewBag.Description</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateEdit" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-            @if (ViewBag.Title == "Edit")
-            {
-                <input type="hidden" asp-for="CourseID" />
-            }
-
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Credits" class="control-label"></label>
-                <input asp-for="Credits" class="form-control" />
-                <span asp-validation-for="Credits" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="@ViewBag.Title" class="btn btn-primary" />
-            </div>
-        </form>
-        <a asp-action="Index" class="btn btn-outline-primary">Back</a>
+<h1>@ViewBag.Title</h1>
+<form asp-action="CreateEdit">
+    @Html.AntiForgeryToken()
+    <div class="form-group">
+        @Html.LabelFor(model => model.Title)
+        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
     </div>
-</div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    <div class="form-group">
+        @Html.LabelFor(model => model.Credits)
+        @Html.EditorFor(model => model.Credits, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+    <button type="submit" class="btn btn-primary">Save</button>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+</form>
+@if (Model.CourseID != 0)
+{
+    <a asp-action="Clone" asp-route-id="@Model.CourseID" class="btn btn-secondary">Clone</a>
 }
