--- a/ContosoUniversity/Views/Courses/DetailsDelete.cshtml
+++ b/ContosoUniversity/Views/Courses/DetailsDelete.cshtml
@@ -6,28 +6,16 @@
 <div>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseID);
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CourseID);
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Title);
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Title);
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Credits);
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Credits);
-        </dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.CourseID)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.CourseID)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Title)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Title)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Credits)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Credits)</dd>
     </dl>
     <a asp-action="Index" class="btn btn-primary">Back to List</a>
     @{
-        @if (ViewBag.Title == "Title")
+        if (ViewBag.Action == "Delete")
         {
             <a asp-action="Delete" asp-route-id="@Model.CourseID" class="btn btn-secondary">Delete</a>
         }
@@ -36,6 +24,5 @@
             <a asp-action="CreateEdit" asp-route-id="@Model.CourseID" class="btn btn-warning">Edit</a>
             <a asp-action="Clone" asp-route-id="@Model.CourseID" class="btn btn-secondary">Clone</a>
         }
-
     }
 </div>
