--- a/ContosoUniversity/Views/Employees/Edit.cshtml
+++ b/ContosoUniversity/Views/Employees/Edit.cshtml
@@ -41,6 +41,6 @@
     </div>
 </div>
 <div>
-    <input type="hidden" asp-for="ID" />
+    <input type="hidden" asp-for="EmployeeID" />
     <input type="submit" value="Edit" class="btn btn-warning" /> | <a asp-action="Index">Cancel</a>
 </div>
