--- a/ContosoUniversity/Views/Departments/Edit.cshtml
+++ b/ContosoUniversity/Views/Departments/Edit.cshtml
@@ -36,6 +36,5 @@
     </div>
 </div>
 <div>
-    <input type="hidden" asp-for="DepartmentID" />
-    <input type="submit" value="Edit" class="btn btn-warning" /> | <a asp-action="Index">Cancel</a>
+    <input type="hidden" asp-for="DepartmentID" />  <a asp-action="Index">Cancel</a>
 </div>
