--- a/ContosoUniversity/Views/Departments/Edit.cshtml
+++ b/ContosoUniversity/Views/Departments/Edit.cshtml
@@ -1,13 +1,14 @@
-﻿@model ContosoUniversity.Models.Department
+﻿
+@model ContosoUniversity.Models.Department
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Ed";
 }
 
-<h1>Edit</h1>
+<h1>Details</h1>
 
 <div>
-    <h4>Department Data</h4>
+    <h4>Student data</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -36,5 +37,5 @@
     </div>
 </div>
 <div>
-    <input type="hidden" asp-for="DepartmentID" />  <a asp-action="Index">Cancel</a>
+    <input type="hidden" asp-for="DepartmentID" /> | <a asp-action="Index">Cancel</a>
 </div>
