--- a/ContosoUniversity/Views/Courses/Index.cshtml
+++ b/ContosoUniversity/Views/Courses/Index.cshtml
@@ -1,35 +1,35 @@
 ﻿@model IEnumerable<ContosoUniversity.Models.Course>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Courses";
 }
-<h1>Departments</h1>
+<h1>Courses</h1>
 <p>
-    <a asp-action="Create">Make a new course</a>
+    <a asp-action="CreateEdit">Create a new course</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.First().CourseID)</th>
-            <th>@Html.DisplayNameFor(model => model.First().Title)</th>
-            <th>@Html.DisplayNameFor(model => model.First().Credits)</th>
-            <th>@Html.DisplayNameFor(model => model.First().Enrollments)</th>
-            <th>Available actions:</th>
+            <th> @Html.DisplayNameFor(model => model.CourseID) </th>
+            <th> @Html.DisplayNameFor(model => model.Title) </th>
+            <th> @Html.DisplayNameFor(model => model.Credits) </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var course in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => course.CourseID)</td>
-                <td>@Html.DisplayFor(modelItem => course.Title)</td>
-                <td>@Html.DisplayFor(modelItem => course.Credits)</td>
-                <td>@Html.DisplayFor(modelItem => course.Enrollments.Count)</td>
+                <td> @Html.DisplayFor(modelItem => course.CourseID) </td>
+                <td> @Html.DisplayFor(modelItem => course.Title) </td>
+                <td> @Html.DisplayFor(modelItem => course.Credits) </td>
                 <td>
-                    <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" asp-route-pagetype="@{string pagetype = "details";}" class="btn btn-dark">Details</a>
-                    <a asp-action="CreateEdit" asp-route-id="@course.CourseID" class="btn btn-dark">Edit</a>
-                    <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" class="btn btn-dark">Delete</a>
+                    <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" asp-route-name="Details" class="btn btn-dark">Details</a>
+                    <a asp-action="DetailsDelete" asp-route-id="@course.CourseID" asp-route-name="Delete" class="btn btn-dark">Delete</a>
+                    <a asp-action="CreateEdit" asp-route-id="@course.CourseID" asp-route-name="Delete" class="btn btn-dark">Edit</a>
+
                 </td>
             </tr>
         }
     </tbody>
+
 </table>
